# wapor-v3-odc-products

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  jupyter_lab_config.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
data/Incremental_ET_M/: AFR_DIWASA_ETIncrement_M_2003.01.01.odc-metadata.yaml  AFR_DIWASA_ETIncrement_M_2003.01.01.stac-item.json  iwmi_blue_et_monthly_storage_parameters
data/Rainfall_ET_M/: AFR_DIWASA_ETIncrement_M_2003.01.01.odc-metadata.yaml  AFR_DIWASA_ETIncrement_M_2003.01.01.stac-item.json
data/wapor_soil_moisture/: WAPOR-3.L2-RSM-D.2018-01-D1.odc-metadata.yaml  WAPOR-3.L2-RSM-D.2018-01-D1.stac-item.json
notebooks/: TestLoading.ipynb
products/: iwmi_blue_et_monthly.odc-product.yaml  iwmi_green_et_monthly.odc-product.yaml
src/iwmi_odr_odc_product_py/: prepare_iwmi_blue_et_monthly_metadata.py  prepare_iwmi_green_et_monthly_metadata.py  stac.py  storage_parameters.py
src/iwmi_odr_odc_product_py/eo3assemble/: easi_assemble.py  easi_eo3_readme.md  easi_prepare_template.py
src/iwmi_odr_odc_product_py/eo3assemble/tests/: test_easi_assemble.py
src/wapor_v3_odc_products_py/: io.py  logs.py  prepare_wapor_soil_moisture_metadata.py  stac.py  storage_parameters.py  utils.py
src/wapor_v3_odc_products_py/eo3assemble/: easi_assemble.py  easi_prepare_template.py
src/wapor_v3_odc_products_py/eo3assemble/tests/: conftest.py  test_easi_assemble.py
workflows/: index_iwmi_blue_et_monthly_datasets.sh  index_iwmi_greeen_et_monthly_datasets.sh  index_wapor_soil_moisture.sh
